--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,8 @@
    "outputs": [],
    "source": [
     "italy = None # 'Italy'\n",
-    "italy"
+    "italy\n",
+    "italy = "
    ]
   },
   {
