Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "italy = None # 'Italy'\n",
     "italy\n",
-    "italy = countries"
+    "italy = countries[]"
    ]
   },
   {
