Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "italy = None # 'Italy'\n",
     "italy\n",
-    "italy = countries[]"
+    "italy = countries[-3]"
    ]
   },
   {
