Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,8 @@
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico\n"
+    "mexico\n",
+    "mexico = countrie"
    ]
   },
   {
