Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,13 +198,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'USA'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mexico = None\n",
     "mexico\n",
-    "mexico = countries[]"
+    "mexico = countries[4]\n",
+    "mexico"
    ]
   },
   {
