--- a/index.ipynb
+++ b/index.ipynb
@@ -198,16 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'USA'"
+       "'Mexico'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
    "source": [
     "mexico = None\n",
     "mexico\n",
-    "mexico = countries[4]\n",
+    "mexico = countries[3]\n",
     "mexico"
    ]
   },
