--- a/index.ipynb
+++ b/index.ipynb
@@ -252,11 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = \"MaltNone # add code here"
+    "kindof_neighbors = \"Malta\"  # add code here"
    ]
   },
   {
