--- a/index.ipynb
+++ b/index.ipynb
@@ -256,7 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = \"Malta\"  # add code here"
+    "kindof_neighbors = \"Malta\"  # add code here\n",
+    "kindof_neighb"
    ]
   },
   {
