Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
    "outputs": [],
    "source": [
     "kindof_neighbors = \"Malta\"  # add code here\n",
-    "kindof_neighb"
+    "kindof_neighbors"
    ]
   },
   {
