--- a/index.ipynb
+++ b/index.ipynb
@@ -268,8 +268,7 @@
     }
    ],
    "source": [
-    "kindof_neighbors = \"Malta\"  # add code here\n",
-    "kindof_neighbors.pop()"
+    "kindof_neighbors = \"Malta\"  # add code "
    ]
   },
   {
