--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
    "outputs": [],
    "source": [
     "kindof_neighbors = \"Malta\"  # add code \n",
-    "kindof_neighbors = list(kindof_neighbors)"
+    "kindof_neighbors = list(kindof_neighbors)\n"
    ]
   },
   {
