Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -252,12 +252,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['M', 'a', 'l', 't', 'a']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kindof_neighbors = \"Malta\"  # add code \n",
-    "kindof_neighbors = list(kindof_neighbors)\n"
+    "kindof_neighbors = list(kindof_neighbors)\n",
+    "kindof_neighbors"
    ]
   },
   {
