Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -252,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['M', 'a', 'l', 't', 'a']"
+       "<function list.pop>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
    "source": [
     "kindof_neighbors = \"Malta\"  # add code \n",
     "kindof_neighbors = list(kindof_neighbors)\n",
-    "kindof_neighbors"
+    "kindof_neighbors.pop"
    ]
   },
   {
