--- a/index.ipynb
+++ b/index.ipynb
@@ -252,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function list.pop>"
+       "['M', 'a', 'l', 't', 'a']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,8 @@
    "source": [
     "kindof_neighbors = \"Malta\"  # add code \n",
     "kindof_neighbors = list(kindof_neighbors)\n",
-    "kindof_neighbors.pop"
+    "kindof_neighbors.pop\n",
+    "kindof_neighbors"
    ]
   },
   {
