Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,8 @@
     "kindof_neighbors = \"Malta\"  # add code \n",
     "kindof_neighbors = list(kindof_neighbors)\n",
     "kindof_neighbors.pop\n",
-    "kindof_neighbors\n"
+    "kindof_neighbors\n",
+    "ciuntries.append('')"
    ]
   },
   {
