Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -252,26 +252,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['M', 'a', 'l', 't', 'a']"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kindof_neighbors = \"Malta\"  # add code \n",
     "kindof_neighbors = list(kindof_neighbors)\n",
     "kindof_neighbors.pop\n",
     "kindof_neighbors\n",
-    "ciuntries.append('')"
+    "countries.append('Malta')"
    ]
   },
   {
