--- a/index.ipynb
+++ b/index.ipynb
@@ -272,11 +272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append('Malta') # add code here"
+    "countries.append('Thailand') # add code here"
    ]
   },
   {
