Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,30 +272,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Croatia',\n",
-       " 'USA',\n",
-       " 'Argentina',\n",
-       " 'Mexico',\n",
-       " 'USA',\n",
-       " 'Morocco',\n",
-       " 'New Mexico',\n",
-       " 'Finland',\n",
-       " 'Argentina',\n",
-       " 'Italy',\n",
-       " 'Canada',\n",
-       " 'South Korea',\n",
-       " 'Malta',\n",
-       " 'Thailand',\n",
-       " 'Thailand']"
+       "<function list.pop>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +289,7 @@
    "source": [
     "countries.append('Thailand') # add code here\n",
     "countries\n",
-    "countrie"
+    "countries.pop"
    ]
   },
   {
