Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,16 +272,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function list.pop>"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand',\n",
+       " 'Thailand',\n",
+       " 'Thailand',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +305,8 @@
    "source": [
     "countries.append('Thailand') # add code here\n",
     "countries\n",
-    "countries.pop"
+    "countries.pop\n",
+    "countries.pop()"
    ]
   },
   {
