Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "countries.append('Thailand') # add code here\n",
     "countries\n",
     "countries.pop\n",
-    "countries.pop(\"Thailand\")"
+    "countries.pop(\")"
    ]
   },
   {
