--- a/index.ipynb
+++ b/index.ipynb
@@ -272,16 +272,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Thailand'"
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'New Mexico',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand',\n",
+       " 'Thailand',\n",
+       " 'Thailand',\n",
+       " 'Thailand',\n",
+       " 'Thailand']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +306,8 @@
    "source": [
     "countries.append('Thailand') # add code here\n",
     "countries\n",
-    "countries.pop()"
+    "countries.pop()\n",
+    "countries"
    ]
   },
   {
