--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "len(countries\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
