--- a/index.ipynb
+++ b/index.ipynb
@@ -464,11 +464,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(countries\n",
+    "len(countries)\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
