--- a/index.ipynb
+++ b/index.ipynb
@@ -469,6 +469,7 @@
    "outputs": [],
    "source": [
     "len(countries)\n",
+    "len()\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
