--- a/index.ipynb
+++ b/index.ipynb
@@ -464,12 +464,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "len(countries)\n",
-    "len()\n",
+    "len(unique_countries)\n",
     "num_of_repeats = None\n",
     "num_of_repeats # 3"
    ]
