Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -470,7 +470,7 @@
    "source": [
     "len(countries)\n",
     "len(unique_countries)\n",
-    "num_of_repeats = len()\n",
+    "num_of_repeats = len(countries) - len(uniqu)\n",
     "num_of_repeats # 3"
    ]
   },
