--- a/index.ipynb
+++ b/index.ipynb
@@ -464,13 +464,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(countries)\n",
     "len(unique_countries)\n",
-    "num_of_repeats = len(countries) - len(uniqu)\n",
+    "num_of_repeats = len(countries) - len(unique_countries)\n",
     "num_of_repeats # 3"
    ]
   },
